--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-cayman
+
+social_links:
+  github: "http://github.com/rahulbakshee/"
+  twitter: "https://twitter.com/rahulbakshee"
+  linkedin: "https://linkedin.com/in/rahulbakshee"
