--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,41 @@ social_links:
   twitter: "https://twitter.com/rahulbakshee"
   linkedin: "https://linkedin.com/in/rahulbakshee"
 
+
+
+title: This is Title
+description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
+github_username: rahulbakshee
+
+# Email and twitter are optional:
+email:
+twitter_username: rahulbakshee
+
+# Set this to true to get LaTeX math equation support
+use_math:
+
+# Add your Google Analytics ID here if you have one and want to use it
+google_analytics:
+
+# Everything below here can be ignored, unless you want to change the theme entirely
+theme: minima
 plugins:
+  - jekyll-feed
+  - jekyll-gist
+  - jekyll-octicons
+  - jekyll-github-metadata
   - jekyll-twitter-plugin
+
+titles_from_headings:
+  enabled:     true
+  strip_title: true
+  collections: true
+
+highlighter: rouge
+markdown: kramdown
+kramdown:
+  math_engine: katex
+  input: GFM
+  auto_ids: true
+  hard_wrap: false
+  syntax_highlighter: rouge
