--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: This is Title
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: rahulbakshee
+title: iWriteHere
+description: Happy blogging... ❤
 
 # Email and twitter are optional:
-email:
-linkedin_username: rahulbakshee
+email: 
 twitter_username: rahulbakshee
+github_username: rahulbakshee
+linkedin_username: rahulbakshee
 
 # Set this to true to get LaTeX math equation support
-use_math:
+use_math: true
 
 # Add your Google Analytics ID here if you have one and want to use it
 google_analytics:
@@ -16,11 +16,10 @@ google_analytics:
 # Everything below here can be ignored, unless you want to change the theme entirely
 theme: minima
 plugins:
-  - jekyll-feed
   - jekyll-gist
   - jekyll-octicons
   - jekyll-github-metadata
-  - jekyll-twitter-plugin
+#  - jekyll-twitter-plugin
 
 highlighter: rouge
 markdown: kramdown
