--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,11 @@ google_analytics:
 
 # Everything below here can be ignored, unless you want to change the theme entirely
 theme: minima
+plugins:
+  - jekyll-feed
+  - jekyll-gist
+  - jekyll-octicons
+  - jekyll-github-metadata
 
 highlighter: rouge
 markdown: kramdown
