--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: iWriteHere
 description: Happy blogging... ❤
 
 # Email and twitter are optional:
-youtube_username: jZ09Tf8WvvsYoHmDZWsWBQ
+youtube_username: UCjZ09Tf8WvvsYoHmDZWsWBQ
 twitter_username: rahulbakshee
 github_username: rahulbakshee
 linkedin_username: rahulbakshee
