--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: iWriteHere
 description: Happy blogging... ❤
+baseurl: "/iWriteHere"
+profile_url: "https://rahulbakshee.github.io"
 
 # Email and twitter are optional:
 # youtube_username: UCjZ09Tf8WvvsYoHmDZWsWBQ
