--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: iWriteHere
 name: "rahul bakshee blog"
-author: Rahul Bakshee
-description: i❤learning
+# author: Rahul Bakshee
+description: happy❤learning
 baseurl: "/iWriteHere"
 profile_url: "https://rahulbakshee.github.io"
 
