--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: iWriteHere
 name: happy❤learning
-# author: Rahul Bakshee
+author: Rahul Bakshee
 description: happy❤coding
-baseurl: "/iWriteHere"
+#baseurl: "/iWriteHere"
 profile_url: "https://rahulbakshee.github.io"
 
 # Email and twitter are optional:
