--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: iWriteHere
-name: happy❤learning
+name: 'happy❤learning'
 author: Rahul Bakshee
-description: happy❤coding
+description: happy❤learning
 #baseurl: "/iWriteHere"
 profile_url: "https://rahulbakshee.github.io"
 
