--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: iWriteHere
 name: 'happy❤learning'
 author: Rahul Bakshee
-description: happy❤learning
+description: happy❤coding
 #baseurl: "/iWriteHere"
 profile_url: "https://rahulbakshee.github.io"
 
