--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ name: 'happy❤learning'
 author: Rahul Bakshee
 description: happy❤learning
 site_url: 'https://github.com/rahulbakshee/iWriteHere'
-# baseurl: "/iWriteHere"
-# profile_url: "https://rahulbakshee.github.io"
-# url: "https://rahulbakshee.github.io"
+baseurl: "/iWriteHere"
+profile_url: "https://rahulbakshee.github.io"
+
 
 # Email and twitter are optional:
 # youtube_username: UCjZ09Tf8WvvsYoHmDZWsWBQ
