--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,10 @@ site_url: 'https://github.com/rahulbakshee/iWriteHere'
 baseurl: "/iWriteHere"
 profile_url: "https://rahulbakshee.github.io"
 
-
+twitter:
+  username: rahulbakshee
+  card: summary
+  
 # Email and twitter are optional:
 # youtube_username: UCjZ09Tf8WvvsYoHmDZWsWBQ
 # twitter_username: rahulbakshee
