--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-feed
   - jekyll-archives
+  - jekyll-sitemap
 
 # titles_from_headings:
 #  enabled:     true
